--- a/Pustok_Project/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -10,3 +10,7 @@
 <h1 style="margin:4px 0; display:flex; align-items:center; justify-content:center;">Brands</h1>
 <hr />
 <partial name="_BrandPartial" model="@Model.Brands" />
+
+<h1 style="margin:4px 0; display:flex; align-items:center; justify-content:center;">Products</h1>
+<hr />
+<partial name="_ProductPartial" model="@Model.Products" />
