--- a/Pustok_Project/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Pustok_Project
 @using Pustok_Project.Models
 @using Pustok_Project.Areas.Admin.ViewModels
+@using Pustok_Project.Enums
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
