--- a/Pustok_Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -197,7 +197,7 @@
             </div>
         </div>
     </div>
-
+    @await RenderSectionAsync("Scripts",false)
     <!-- Bootstrap core JavaScript-->
     <script src="~/admin/vendor/jquery/jquery.min.js"></script>
     <script src="~/admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
