--- a/Pustok_Project/Areas/Admin/Views/Brand/Edit.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Brand/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="mb-3">
         <label for="cat" class="form-label">Image</label>
         <input asp-for="Image" class="form-control" id="cat">
-        <span asp-validation-for="Image"></span>
+        <span class="text-danger" asp-validation-for="Image"></span>
     </div>
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <button type="submit" class="btn btn-primary">Submit</button>
