--- a/Pustok_Project/Areas/Admin/Views/Brand/Index.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Brand/Index.cshtml
@@ -4,3 +4,16 @@
 @model List<Brand>
 
 <partial name="_BrandPartial" model="@Model" />
+
+@section Scripts {
+    <script>
+        const selectListBrand = document.getElementById("slct-brand");
+        const productBtnBrand = document.getElementById("product-btn-brnd");
+
+        productBtnBrand.href = "product/detail/" + selectListBrand.value;
+
+        selectListBrand.addEventListener("change", () => {
+            productBtnBrand.href = "product/detail/" + selectListBrand.value;
+        })
+    </script>
+}
