--- a/Pustok_Project/Areas/Admin/Views/Category/Create.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Category/Create.cshtml
@@ -14,7 +14,7 @@
         <select class="form-control" asp-for="ParentId" asp-items="@(new SelectList(ViewBag.Categories,nameof(Category.Id),nameof(Category.Name)))">
             <option value="" selected>No Parent</option>
         </select>
-        <span asp-validation-for="ParentId"></span>
+        <span class="text-danger" asp-validation-for="ParentId"></span>
     </div>
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <button type="submit" class="btn btn-primary">Submit</button>
