--- a/Pustok_Project/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Category/Edit.cshtml
@@ -22,7 +22,7 @@
                 <option value="" selected>No Parent</option>
             }
         </select>
-        <span asp-validation-for="ParentId"></span>
+        <span class="text-danger" asp-validation-for="ParentId"></span>
     </div>
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <button type="submit" class="btn btn-primary">Submit</button>
