--- a/Pustok_Project/Areas/Admin/Views/Product/Create.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Product/Create.cshtml
@@ -39,36 +39,36 @@
         <select id="cat" class="form-control" asp-for="CategoryId" asp-items="@(new SelectList(ViewBag.Categories,nameof(Category.Id),nameof(Category.Name)))">
             <option value="" selected>Select Category</option>
         </select>
-        <span asp-validation-for="CategoryId"></span>
+        <span class="text-danger" asp-validation-for="CategoryId"></span>
     </div>
     <div class="mb-3">
         <label for="brnd" class="form-label">Brand</label>
         <select id="brnd" class="form-control" asp-for="BrandId" asp-items="@(new SelectList(ViewBag.Brands,nameof(Brand.Id),nameof(Brand.Name)))">
             <option value="" selected>Select Brand</option>
         </select>
-        <span asp-validation-for="BrandId"></span>
+        <span class="text-danger" asp-validation-for="BrandId"></span>
     </div>
     <div class="mb-3">
         <label for="type" class="form-label">Type</label>
         <select id="type" class="form-control" asp-for="BookType" asp-items="Html.GetEnumSelectList<BookType>()">
             <option value="" selected>Select Type</option>
         </select>
-        <span asp-validation-for="BookType"></span>
+        <span class="text-danger" asp-validation-for="BookType"></span>
     </div>
     <div class="mb-3">
         <label for="mimg" class="form-label">Main Image</label>
         <input asp-for="MainImage" class="form-control" id="mimg">
-        <span asp-validation-for="MainImage"></span>
+        <span class="text-danger" asp-validation-for="MainImage"></span>
     </div>
     <div class="mb-3">
         <label for="himg" class="form-label">Hover Image</label>
         <input asp-for="HoverImage" class="form-control" id="himg">
-        <span asp-validation-for="HoverImage"></span>
+        <span class="text-danger" asp-validation-for="HoverImage"></span>
     </div>
     <div class="mb-3">
         <label for="imgs" class="form-label">Additional Images</label>
         <input asp-for="AdditionalImages" class="form-control" id="imgs">
-        <span asp-validation-for="AdditionalImages"></span>
+        <span class="text-danger" asp-validation-for="AdditionalImages"></span>
     </div>
     <div class="mb-3" style="display:flex;align-items:center;">
         <label for="bit" class="form-label">In Stock?</label>
