--- a/Pustok_Project/Areas/Admin/Views/Shared/_CategoryPartial.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Shared/_CategoryPartial.cshtml
@@ -14,8 +14,7 @@
                                 <thead>
                                     <tr role="row">
                                         <th class="sorting sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 200px;">Name</th>
-                                        <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 200px;">Product Name</th>
-                                        <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 200px;">Product Description</th>
+                                        <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 200px;">Products</th>
                                         <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Age: activate to sort column ascending" style="width: 100px;">Parent Category</th>
                                         <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Age: activate to sort column ascending" style="width: 100px;"></th>
                                     </tr>
@@ -25,25 +24,23 @@
                                     {
                                         if (category.Products.Count != 0)
                                         {
-                                            @foreach (var product in category.Products)
-                                            {
-                                                <tr>
-                                                    <td>@category.Name</td>
-                                                    <td>@product.Name</td>
-                                                    <td>@product.Description</td>
-                                                    <td>@(category.Parent != null ? category.Parent.Name : "No Parent")</td>
-                                                    <td style="display:flex; gap:8px; align-items:center; justify-content:center;">
-                                                        <a class="btn btn-primary" asp-route-id="@category.Id" asp-controller="Category" asp-action="Edit">Edit</a>
-                                                        <a class="btn btn-danger mt-2" asp-route-id="@category.Id" asp-controller="Category" asp-action="Delete">Delete</a>
-                                                    </td>
-                                                </tr>
-                                            }
+                                            <tr>
+                                                <td>@category.Name</td>
+                                                <td>
+                                                    <select id="slct-cat" style="width:300px" asp-items="@(new SelectList(category.Products,nameof(Product.Id),nameof(Product.Name)))"></select>
+                                                    <a id="product-btn-cat" href="#" class="btn btn-secondary ml-2">Go to product</a>
+                                                </td>
+                                                <td>@(category.Parent != null ? category.Parent.Name : "No Parent")</td>
+                                                <td style="display:flex; gap:8px; align-items:center; justify-content:center;">
+                                                    <a class="btn btn-primary" asp-route-id="@category.Id" asp-controller="Category" asp-action="Edit">Edit</a>
+                                                    <a class="btn btn-danger mt-2" asp-route-id="@category.Id" asp-controller="Category" asp-action="Delete">Delete</a>
+                                                </td>
+                                            </tr>
                                         }
                                         else
                                         {
                                             <tr>
                                                 <td>@category.Name</td>
-                                                <td>Products not found!</td>
                                                 <td>Products not found!</td>
                                                 <td>@(category.Parent != null ? category.Parent.Name : "No Parent")</td>
                                                 <td style="display:flex; gap:8px; align-items:center; justify-content:center;">
