--- a/Pustok_Project/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Pustok_Project/Areas/Admin/Views/Product/Edit.cshtml
@@ -108,7 +108,7 @@
         getProductImagesAsync().then(imageSpans => imageSpans.forEach(span => {
             span.addEventListener("click", async () => {
                 deleteProductImageAsync(span.dataset.id);
-                getProductImagesAsync();
+                window.location.reload();
             })
         }))
     </script>
